--- a/src/pages/recommend/PlaceList.module.css
+++ b/src/pages/recommend/PlaceList.module.css
@@ -1,12 +1,11 @@
 .mapWrapper {
-  width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
 }
 
 .map {
+  flex: 1;
   width: 100%;
-  height: 100%;
-  min-height: 400px; /* 보이게 하기 위한 기본 높이 */
-  background-color: lightgray; /* 디버깅용 (지도 영역 확인용) */
+  min-height: 300px;
 }
