--- a/src/pages/myPage/MyPage.module.css
+++ b/src/pages/myPage/MyPage.module.css
@@ -11,10 +11,30 @@
     list-style: none;
     margin: 0;   
     padding: 0; 
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    background-color: #f5f5f5;
 }
 
-.menu li{
-    margin-right:20px;
+.menu li {
+    width: 100%;
+  
+}
+
+.menu li a{
+    display: block;
+    width: 86%;
+    padding:14px 20px;
+    color: inherit;
+    text-decoration:none;
+    font-size: 20px;
+    transition: background-color 0.2s ease;
+}
+
+.menu li a:hover{
+    background-color: #cbcaca;
+    font-weight: bold;
 }
 
 .info{
